gitops/java/petclinic/overlays/uat/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: petclinic
spec:
  template:
    spec:
      containers:
      - imagePullPolicy: Always
        name: petclinic
  triggers:
  - imageChangeParams:
      containerNames:
      - petclinic
      from:
        kind: ImageStreamTag
        name: petclinic:uat
        namespace: cicd
