gitops/java/petclinic/overlays/uat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  host: app-petclinic-uat.apps.cluster-ottawa-4ef5.ottawa-4ef5.example.opentlc.com
status:
  ingress:
  - conditions:
    host: app-petclinic-uat.apps.cluster-ottawa-4ef5.ottawa-4ef5.example.opentlc.com
